--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "morgan": "^1.10.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "socket.io": "^4.0.0",
+    "socket.io-client": "^4.0.0",
     "webpack": "^5.28.0",
     "webpack-cli": "^4.6.0"
   },
