--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^8.2.2",
     "body-parser": "^1.19.0",
+    "compression": "^1.7.4",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
     "react": "^17.0.2",
