--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon server/index.js",
-    "transpile": "webpack --watch"
+    "build-watch": "webpack --watch",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
