--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "babel-loader": "^8.2.2",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
     "react": "^17.0.2",
