--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "morgan": "^1.10.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-media-hook": "^0.4.9",
     "react-router-dom": "^5.2.0",
     "socket.io": "^4.0.0",
     "socket.io-client": "^4.0.0",
