--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "compression": "^1.7.4",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.6.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-media-hook": "^0.4.9",
